--- a/neural-style_and_vqgd-clip-canvas/client/package.json
+++ b/neural-style_and_vqgd-clip-canvas/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-three-fiber": "^6.0.13",
     "three": "^0.137.5",
