--- a/neural-style_and_vqgd-clip-canvas/client/package.json
+++ b/neural-style_and_vqgd-clip-canvas/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.6.0",
+    "@material-tailwind/react": "0.3.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
